drop down container hide on firefox issue resolved

--- a/src/main/java/org/ednovo/gooru/client/mvp/shelf/collection/Collection.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/shelf/collection/Collection.css
@@ -1285,7 +1285,6 @@ height: 73px;
 	/* Firefox v4.0+ , Safari v5.0+ , Chrome v4.0+ , Opera v10.5+  and by IE v9.0+ */
 	border-radius:1px;
 	border-style:solid;
-	position: absolute;
 }
 .arrowInstructional {
     width: 0;
